[package]
name = "basn1"
version = "0.1.2"
authors = ["Vincent Hanquez <vincent@typed.io>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Binary ASN.1 encoding and decoding no-std library (DER)"
homepage = "https://github.com/vincenthz/rs-basn1/"
repository = "https://github.com/vincenthz/rs-basn1/"

categories = ["encoding"]
keywords = ["ASN1", "encoding", "DER"]

[dependencies]
